Fix background on mobile: use scroll attachment instead of fixed
background-attachment:fixed on iOS pins image to viewport center,
cropping left/right. scroll lets cover work correctly on mobile.

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -24,6 +24,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (max-width: 768px) {
+  body {
+    background-attachment: scroll;
+  }
+}
+
 #root {
   min-height: 100%;
   display: flex;
